feat: game html structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="assets/style.css" rel="stylesheet">
+    <title>Code Institute Memory Game</title>
 </head>
 <body>
-    
+    <h1>Memorey Game</h1>
+    <div id="game-container">
+        <div id="game-info-container">
+            <div class="game-info">
+                Level <span id="level"></span>
+            </div>
+            <div class="game-info">
+                Lives <span id="lives"></span>
+            </div>
+        </div>
+        <div id="card-container">
+        </div>
+    </div>
 </body>
 </html>
