feat: added cards

--- a/index.html
+++ b/index.html
@@ -3,21 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>Code Institute Memory Game</title>
 </head>
 <body>
-    <h1>Memorey Game</h1>
+    <h1 class="game-title">Memorey Game</h1>
     <div id="game-container">
         <div id="game-info-container">
             <div class="game-info">
-                Level <span id="level"></span>
+                Level <span id="level">1</span>
             </div>
             <div class="game-info">
-                Lives <span id="lives"></span>
+                Lives <span id="lives">4</span>
             </div>
         </div>
-        <div id="card-container">
+        <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+        <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
+        </div>
+                <div class="card">
+            <div class="card-back card-face"></div>
+            <div class="card-front card-face">?</div>
         </div>
     </div>
 </body>
