--- a/index.html
+++ b/index.html
@@ -18,53 +18,34 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
+            <div class="card-front card-face"></div>
+            <div class="card-back card-face">?</div>
         </div>
         <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
+            <div class="card-front card-face"></div>
+            <div class="card-back card-face">?</div>
         </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
+        <div class="card">
+            <div class="card-front card-face"></div>
+            <div class="card-back card-face">?</div>
         </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
+        <div class="card">
+            <div class="card-front card-face"></div>
+            <div class="card-back card-face">?</div>
         </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
+        <div class="card">
+            <div class="card-front card-face"></div>
+            <div class="card-back card-face">?</div>
         </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
+        <div class="card">
+            <div class="card-front card-face"></div>
+            <div class="card-back card-face">?</div>
         </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
-        </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
-        </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
-        </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
-        </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
-        </div>
-                <div class="card">
-            <div class="card-back card-face"></div>
-            <div class="card-front card-face">?</div>
+        <div class="card">
+            <div class="card-front card-face"></div>
+            <div class="card-back card-face">?</div>
         </div>
     </div>
+    <script src="assets/js/game.js"></script>
 </body>
 </html>
