--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-front card-face"></div>
+            <div class="card-front card-face"><img src="assets/svg/js-badge.svg"></div>
             <div class="card-back card-face">?</div>
         </div>
         <div class="card">
@@ -46,6 +46,7 @@
             <div class="card-back card-face">?</div>
         </div>
     </div>
-    <script src="assets/js/game.js"></script>
+    <script type="text/javascript" src="data.json"></script>
+    <script type="text/javascript" src="assets/js/game.js"></script>
 </body>
 </html>
