--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="card-back card-face">?</div>
         </div>
     </div>
-    <script type="text/javascript" src="data.json"></script>
+    <script type="text/javascript" src="assets/gameData.json"></script>
     <script type="text/javascript" src="assets/js/game.js"></script>
 </body>
 </html>
