feat: cards add dynamicaly

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <title>Code Institute Memory Game</title>
 </head>
 <body>
@@ -19,30 +20,6 @@
         </div>
         <div class="card">
             <div class="card-front card-face"><img src="assets/svg/js-badge.svg"></div>
-            <div class="card-back card-face">?</div>
-        </div>
-        <div class="card">
-            <div class="card-front card-face"></div>
-            <div class="card-back card-face">?</div>
-        </div>
-        <div class="card">
-            <div class="card-front card-face"></div>
-            <div class="card-back card-face">?</div>
-        </div>
-        <div class="card">
-            <div class="card-front card-face"></div>
-            <div class="card-back card-face">?</div>
-        </div>
-        <div class="card">
-            <div class="card-front card-face"></div>
-            <div class="card-back card-face">?</div>
-        </div>
-        <div class="card">
-            <div class="card-front card-face"></div>
-            <div class="card-back card-face">?</div>
-        </div>
-        <div class="card">
-            <div class="card-front card-face"></div>
             <div class="card-back card-face">?</div>
         </div>
     </div>
