feat: add game overlays

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Code Institute Memory Game</title>
 </head>
 <body>
+    <div id="start-overlay" class="overlay visible">
+        Click to Start
+    </div>
+    <div id="game-over-overlay" class="overlay">
+        GAME OVER
+        <span class="overlay-text-sub">Click to Restart</span>
+    </div>
+    <div id="victory-overlay" class="overlay">
+        VICTORY
+        <span class="overlay-text-sub">Click to Restart</span>
+    </div>
     <h1 class="game-title">Memorey Game</h1>
     <div id="game-container">
         <div id="game-info-container">
