--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="victory-overlay" class="overlay">
         VICTORY
-        <span class="overlay-text-sub">Click to Restart</span>
+        <span class="overlay-text-sub">Go To Next Level</span>
     </div>
     <h1 class="game-title">Memorey Game</h1>
     <div id="game-container">
