fix: remove previous levels cards before adding next

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         VICTORY
         <span class="overlay-text-sub">Go To Next Level</span>
     </div>
-    <h1 class="game-title">Memorey Game</h1>
+    <h1 class="game-title">Memory Game</h1>
     <div id="game-container">
         <div id="game-info-container">
             <div class="game-info">
-                Level <span id="level">1</span>
+                Level <span id="level">0</span>
             </div>
             <div class="game-info">
                 Lives <span id="lives">4</span>
