feat: added lives calc percent function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="game-info">
                 <div id="fluid-meter" class="mx-auto"></div>
-                Lives <span id="lives">4</span>
+                Lives
             </div>
         </div>
     </div>
