feat: added circle around level text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div id="game-container">
         <div id="game-info-container">
             <div class="game-info">
-                Level <span id="level">0</span>
+                <div id="level">0</div>
+                Level
             </div>
             <div class="game-info">
                 <div id="fluid-meter" class="mx-auto"></div>
