feat: added logo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap" rel="stylesheet"> 
     <link href="assets/css/style.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="assets/js/js-fluid-meter.js"></script>
@@ -20,7 +22,10 @@
         VICTORY
         <span class="overlay-text-sub">Go To Next Level</span>
     </div>
-    <h1 class="game-title">Memory Game</h1>
+    <div class="game-title">
+        <img class="logo" src="assets/svg/Code_logo_grey_fit.svg">
+        <h1>Memory Game</h1>
+    </div>
     <div id="game-container">
         <div id="game-info-container">
             <div class="game-info">
