feat: refactored code to class

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </div>
     
       <script>
+
     var fm = new FluidMeter();
     fm.init({
       targetContainer: document.getElementById("fluid-meter"),
@@ -70,5 +71,10 @@
     });
 </script>
 <script type="text/javascript" src="assets/js/game.js"></script>
+<script>
+    let game = new MemoryCards();
+
+    game.startGame();
+</script>
 </body>
 </html>
