--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Code Institute Memory Game</title>
 </head>
 <body>
+    
     <div id="start-overlay" class="overlay visible">
         Click to Start
     </div>
@@ -22,11 +23,12 @@
         VICTORY
         <span class="overlay-text-sub">Go To Next Level</span>
     </div>
-    <div class="game-title">
-        <img class="logo" src="assets/svg/Code_logo_grey_fit.svg">
-        <h1>Memory Game</h1>
-    </div>
+
     <div id="game-container">
+        <div class="game-title">
+            <img class="logo" src="assets/svg/Code_logo_grey_fit.svg">
+            <h1>Memory Game</h1>
+        </div>
         <div id="game-info-container">
             <div class="game-info">
                 <div id="level">0</div>
@@ -37,8 +39,10 @@
                 Lives
             </div>
         </div>
-    </div>
-    
+        <div id="card-container">
+
+        </div>
+    </div>    
       <script>
 
     var fm = new FluidMeter();
