feat: added bgMuisc mute button

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 Lives
             </div>
         </div>
+        <button type="button" class="mute">Volume</button>
         <div id="card-container">
 
         </div>
