feat: added speaker icon to mute button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Lives
             </div>
         </div>
-        <button type="button" class="mute">Volume</button>
+        <div class="mute-button unmute"></div>
         <div id="card-container">
 
         </div>
