feat: added install button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="game-title">
             <img class="logo" src="assets/svg/Code_logo_grey_fit.svg">
             <h1>Memory Game</h1>
+            <button id="install-app">Install App</button>
         </div>
         <div id="game-info-container">
             <div class="game-info">
