--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&amp;display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
