--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
       }
     });
 </script>
+<script type="text/javascript" src="assets/data/gameData.js"></script>
+<script type="text/javascript" src="assets/data/cardData.js"></script>
 <script type="text/javascript" src="assets/js/game.js"></script>
 <script>
     let game = new MemoryCards();
