--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
     </div>
     <div id="game-over-overlay" class="overlay">
         GAME OVER
+        <span class="overlay-text-sub">Total Score: <span class="overall-score"></span></span>
         <span class="overlay-text-sub">Click to Restart</span>
     </div>
     <div id="victory-overlay" class="overlay">
         VICTORY
+        <span class="overlay-text-sub">Level Score: <span id="round-score"></span></span>
+        <span class="overlay-text-sub">Total Score: <span class="overall-score"></span></span>
         <span class="overlay-text-sub">Go To Next Level</span>
     </div>
 
